tests/codegen/fail/unsupported_cleanup_question_mark_build.ql
extern "c" fn first()

fn helper() -> Int {
    return 1
}

fn main() -> Int {
    defer first()
    return helper()?
}
