tests/codegen/fail/unsupported_cleanup_question_mark_build.stderr
error: tests/codegen/fail/unsupported_cleanup_question_mark_build.ql:9:12: LLVM IR backend foundation does not support `?` lowering yet
      return helper()?
             ^^^^^^^^
